# voxel

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
src/components/: FloatingPill.tsx  History.tsx  HomeSettings.tsx  Models.tsx  Overview.tsx  Settings.tsx  ShortcutRecorder.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx  WelcomeScreen.tsx
src/components/ui/: Select.tsx
src/hooks/: useSettings.ts
src/lib/: claude.ts  db.ts  groq.ts  polish.ts  transcription.ts
src/lib/polishers/: anthropic.ts  gemini.ts  groq-llm.ts  openai.ts
src/lib/providers/: assemblyai.ts  deepgram.ts  gemini.ts  groq.ts
src/store/: useAppStore.ts
